force-app/main/default/objects/Global_Event__c/Global_Event__c.object-meta.xml
<CustomObject>
    <description>Global events are events with a widespread impact</description>
    <label>Global Event</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Global Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Global Events</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>