force-app/main/default/objects/Global_Event__c/fields/Actions_Taken__c.field-meta.xml
<CustomField>
    <fullName>Actions_Taken__c</fullName>
    <description>QCC: Actions taken to mitigate this event</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Actions Taken</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>