force-app/main/default/objects/Global_Event__c/fields/Airport_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Airport_Event_Type__c</fullName>
    <description>QCC: Airport event types</description>
    <label>Airport Event Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Snowfall</fullName>
            </value>
            <value>
                <fullName>Thunderstorm Activity</fullName>
            </value>
            <value>
                <fullName>High Winds</fullName>
            </value>
            <value>
                <fullName>Volcano</fullName>
            </value>
            <value>
                <fullName>Cyclone</fullName>
            </value>
            <value>
                <fullName>Hurricane</fullName>
            </value>
            <value>
                <fullName>Fog</fullName>
            </value>
            <value>
                <fullName>Adverse Weather</fullName>
            </value>
            <value>
                <fullName>Strike Action</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>