force-app/main/default/objects/Global_Event__c/fields/Inflight_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Inflight_Event_Type__c</fullName>
    <description>QCC: Indicates global event types relevant to this event</description>
    <label>Inflight Event Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A/C Downgrade</fullName>
            </value>
            <value>
                <fullName>Baggage</fullName>
            </value>
            <value>
                <fullName>Catering</fullName>
            </value>
            <value>
                <fullName>IFE – Full</fullName>
            </value>
            <value>
                <fullName>IFE - Partial</fullName>
            </value>
            <value>
                <fullName>Lights</fullName>
            </value>
            <value>
                <fullName>Q-Entertainment</fullName>
            </value>
            <value>
                <fullName>Strike Action</fullName>
            </value>
            <value>
                <fullName>Toilets</fullName>
            </value>
            <value>
                <fullName>Wifi</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
                <isActive>false</isActive>
                <label>Miscellaneous</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>