force-app/main/default/objects/Global_Event__c/fields/TECH_Inflight_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>TECH_Inflight_Event_Type__c</fullName>
    <description>QCC: Text representation of the Inflight Event Type. This is automatically set to be used to track field history</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Inflight Event Type (Text)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>