force-app/main/default/objects/Global_Event__c/recordTypes/Aircraft_Rego.recordType-meta.xml
<RecordType>
    <fullName>Aircraft_Rego</fullName>
    <active>true</active>
    <description>QCC: Aircraft Rego global event</description>
    <label>Aircraft Rego</label>
</RecordType>