force-app/main/default/objects/Global_Event__c/recordTypes/Airport_Event.recordType-meta.xml
<RecordType>
    <fullName>Airport_Event</fullName>
    <active>true</active>
    <description>QCC: Airport global event</description>
    <label>Airport Event</label>
</RecordType>