force-app/main/default/objects/Global_Event__c/validationRules/QCC_LockClosedGlobalEvent.validationRule-meta.xml
<ValidationRule>
    <fullName>QCC_LockClosedGlobalEvent</fullName>
    <active>true</active>
    <description>QCC: Stop edition of closed event</description>
    <errorConditionFormula>AND( NOT(ISNEW()), not(isChanged(End_Date__c)) , NOT(ISBLANK(End_Date__c)))</errorConditionFormula>
    <errorMessage>This event has an end date and is therefore closed. Clear the end date to update Event.</errorMessage>
</ValidationRule>